# adventofcode

./: .gitignore  README.md
2015/rust/: Cargo.toml  README.md
2015/rust/day01/: Cargo.toml
2015/rust/day01/src/: lib.rs  main.rs
2015/rust/day02/: Cargo.toml
2015/rust/day02/src/: lib.rs  main.rs
2015/rust/day03/: Cargo.toml
2015/rust/day03/src/: lib.rs  main.rs
2015/rust/day04/: Cargo.toml
2015/rust/day04/src/: main.rs
2015/rust/day05/: Cargo.toml
2015/rust/day05/src/: main.rs
2015/rust/day06/: Cargo.toml
2015/rust/day06/src/: main.rs
2015/rust/src/: main.rs
2015/rust/template/src/: main.rs
2024/rust/: Cargo.toml  README.md  day06.py  main.rs
2024/rust/day01/: mod.rs
2024/rust/day01/src/: main.rs
2024/rust/day01/tests/: main_test.rs
2024/rust/day02/: Cargo.toml
2024/rust/day02/src/: main.rs
2024/rust/day03/: Cargo.toml
2024/rust/day04/: Cargo.toml
2024/rust/day05/: Cargo.toml
2024/rust/day06/: Cargo.toml
2024/rust/day08/: Cargo.toml
2024/rust/day09/: Cargo.toml
2024/rust/day10/: Cargo.toml
2024/rust/day11/: Cargo.toml
2024/rust/day12/: Cargo.toml
2024/rust/day13/: Cargo.toml
2024/rust/day14/: Cargo.toml
2024/rust/day15/: Cargo.toml
2024/rust/day16/: Cargo.toml
2024/rust/day17/: Cargo.toml
2024/rust/day18/: Cargo.toml
2024/rust/day19/: Cargo.toml
2024/rust/day20/: Cargo.toml
2024/rust/day21/: Cargo.toml
2024/rust/day22/: Cargo.toml
2024/rust/day23/: Cargo.toml
2024/rust/day24/: Cargo.toml
2024/rust/day25/: Cargo.toml
2024/rust/src/: main.rs
2024/rust/template/: Cargo.toml
(+634 files in other folders)
