[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "main" # Changed binary name to avoid conflict
path = "src/main.rs"

[workspace]
members = [
    ".",       # Root crate
    "day01","day02","day03","day04","day05","day06","day07","day08","day09","day10","day11","day12","day13","day14"
]
