[package]
name = "day24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
rustc-hash = "2.1"
colored = "2.1.0"
itertools = "0.13.0"
paste = "1.0.15"
rayon = "1.10.0"
regex = "1.11.1"

[dev-dependencies]
rstest = "0.23.0"
assert_cmd = "2.0"

[[bin]]
name = "day24"
path = "src/main.rs"